# alien-shooter-template-rs

./: .gitignore  Cargo.toml  README.md  run_on_pynq.tcl
.cargo/: config
src/: interrupt.rs  main.rs  pixel.rs  print.rs
