[package]
name = "alien-shooter-rs"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xil-sys = { git = "https://github.com/hegza/xil-custom-sys", branch = "linux" }
# For the simple print-implementation
arrayvec = { version = "0.5.1", default-features = false }
